--- a/recom_readings.html
+++ b/recom_readings.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Homepage</title>
+    <title>推荐阅读</title>
     <style>
         /* 基本样式 */
         body {
@@ -43,7 +43,6 @@
         /* 内容样式 */
         .content {
             padding: 2em;
-            padding-top: 100px;
         }
 
         h1 {
@@ -69,7 +68,9 @@
     <!-- 主内容 -->
     <!-- Main Content -->
     <div class="content">
-        <p>Working</p>
+        <h2><a href="Papers/blogs_ddpo.html">2024.10 DDPO</a></h2>
+        
+        <div class="clear"></div>
     </div>
 
     <script>
