Update Visit and Fix some bugs

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首页</title>
+    <title>紫色噩梦</title>
     <style>
         /* 基本样式 */
         body {
@@ -56,8 +56,18 @@
             <div class="self-introduction-text">
                 <h2>自我介绍 / Self Introduction</h2>
                 <p>宋子骏，大连理工大学2021级本科生，现已直博中国科学院大学前沿交叉科学学院。
-                    目前在中国科学院软件研究所天机综合信息系统重点实验室实习，从事强化学习领域相关工作。
-                    如果你希望在强化学习等领域与我合作，请通过邮箱联系我：2949203143@mail.dlut.edu.cn。</p>
+                    目前在中国科学院软件研究所天基综合信息系统重点实验室实习，从事强化学习领域相关工作。
+                    如果你希望在强化学习等领域与我合作，你可以通过以下方式联系我：
+                    <ul>
+                        <li>QQ邮箱：2949203143@qq.com</li>
+                        <li>微信：ppnm1208</li>
+                        <li>小红书：紫色噩梦！</li>
+                        <li>知乎：紫色噩梦Devil</li>
+                        <li>Github：ZijunSong</li>
+                        <li>Google学术：Zijun Song</li>
+                    </ul>
+                    <br>如果做不到以理服人，我也略懂一些WTF跆拳道、拳击、自由式摔跤、有道服巴西柔术、泰拳、散打……
+                </p>
             </div>
             <div>
                 <img src="Pics/ZijunSong.jpg" alt="ZijunSong" />
@@ -96,8 +106,6 @@
         <ul>
             <p>暂无</p>
         </ul>
-        
-        <img src="https://shields.io/badge/dynamic/json?color=blue&label=visitors&query=value&url=https://api.countapi.xyz/hit/zijunsong.github.io/visits" alt="Visitor Count">
 
         <div class="clear"></div>
     </div>
