--- a/publications.html
+++ b/publications.html
@@ -62,7 +62,7 @@
         <a href="blogs.html" class="nav-link" onclick="setActive(this)">Blogs</a>
         <a href="recom_readings.html" class="nav-link" onclick="setActive(this)">Recommended Readings</a>
         <a href="visit.html" class="nav-link" onclick="setActive(this)">Visit</a>
-        <a href="collaborators.html" class="nav-link" onclick="setActive(this)">Collaboratorss</a>
+        <a href="collaborators.html" class="nav-link" onclick="setActive(this)">Collaborators</a>
     </header>
 
     <!-- 主内容 -->
