--- a/blogs.html
+++ b/blogs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Homepage</title>
+    <title>文集</title>
     <style>
         /* 基本样式 */
         body {
